<resources>
    <string name="app_name">Text Game</string>

    <string name="save_game">Save Game</string>
    <string name="load_game">Load Game</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="startImageDescription">Image to display on start screen</string>
    <string name="loadGameButton">Load Game</string>
    <string name="newGameButton">New Game</string>
    <string name="startActivityTitle">Text Adventure</string>
    <string name="player_health">Health: </string>
    <string name="player_fatigue">Fatigue: </string>
    <string name="player_intelligence">Intelligence: </string>
    <string name="player_toughness">Toughness: </string>
    <string name="player_strength">Strength: </string>
    <string name="player_speed">Speed: </string>
    <string name="player_awareness">Awareness: </string>
    <string name="player_gold">Gold: </string>
    <string name="game_drawer_header">Player Stats</string>
    <string name="time_of_day">Time of day:</string>
    <string name="drawer_header_text">Player Information</string>
    <string name="default_camp_text">You are in your camp. From here you can explore, access your inventory, sleep, or wait.</string>
    <string name="explore_button">Explore Forest</string>
    <string name="forest_text">You explore the forest, not encountering any animals, and enjoy the peaceful sounds.</string>
</resources>
