<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_health" android:title="@string/player_health" />
        <item android:id="@+id/nav_fatigue" android:title="@string/player_fatigue" />
        <item android:id="@+id/nav_intelligence" android:title="@string/player_intelligence" />
        <item android:id="@+id/nav_toughness" android:title="@string/player_toughness" />
        <item android:id="@+id/nav_strength" android:title="@string/player_strength" />
        <item android:id="@+id/nav_speed" android:title="@string/player_speed" />
        <item android:id="@+id/nav_awareness" android:title="@string/player_awareness" />
    </group>

    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_gold" android:title="@string/player_gold" />
        <item android:id="@+id/nav_time_of_day" android:title="@string/time_of_day"/>
    </group>


</menu>